# to-do-list-api

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
core/: models.py  settings.py  urls.py
tasks/: apps.py  filters.py  models.py  models_history.py  pagination.py  serializers.py  serializers_history.py  signals.py  urls.py  views.py
tasks/domain/: __init__.py  statistics.py
tasks/migrations/: 0001_initial.py  0002_alter_task_title_task_unique_title_per_user.py  0003_taskhistory.py  0004_alter_taskhistory_options.py  0005_task_latest_version.py
tasks/models/: __init__.py  task.py  task_history.py
tasks/serializers/: __init__.py  task.py  task_history.py
tasks/services/: statistics_service.py
tasks/tests/: test_models.py
tasks/views/: __init__.py  task.py  task_history.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py
