[tool.poetry]
name = "to-do-list-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
redis = {extras = ["hiredis"], version = "^5.2.1"}
django-redis = "^5.4.0"
gunicorn = "^23.0.0"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*", "**/.cache/**", "**/site-packages/**"]
python-interpreter = "/home/jonas/.cache/pypoetry/virtualenvs/to-do-list-api-9VOp-8B1-py3.12/bin/python"

[tool.pyrefly.errors]
missing-attribute = false
bad-assignment = false

[tool.poetry.group.dev.dependencies]
pyrefly = "^0.20.2"
mypy = "^1.16.1"
django-stubs = "^5.2.1"
djangorestframework-stubs = "^3.16.0"
types-python-dateutil = "^2.9.0.20250516"
django-types = "^0.21.0"
django-stubs-ext = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"tasks/apps.py" = ["F401"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
show-fixes = true
indent-width = 4
exclude = ["__pycache__", "migrations"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DJ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = ["T201", "COM812", "RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["."]
exclude = ["**/__pycache__"]
reportAttributeAccessIssue = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportMissingTypeStubs = false
reportMissingTypeArgument = false
reportBadOverride = false
reportIncompatibleVariableOverride = false
reportUnusedImport = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false

[tool.pyright.analysis]
stub-path = "typings"
auto-import-completions = true

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
